  08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Update ebuild for version 9999 (master branch).

*gitlab-ce-9.5.4 (08 Sep 2017)

  08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.5.4.ebuild,
  -gitlab-ce-9.5.3.ebuild:
  www-apps/gitlab-ce:  Update 9.5: 9.5.3 => 9.5.4: Security fixes.

*gitlab-ce-9.4.6 (08 Sep 2017)

  08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.4.6.ebuild,
  -gitlab-ce-9.4.5.ebuild:
  www-apps/gitlab-ce:  Update 9.4: 9.4.5 => 9.4.6: Security fixes.

*gitlab-ce-9.3.11 (08 Sep 2017)

  08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.3.11.ebuild,
  -gitlab-ce-9.3.10.ebuild:
  www-apps/gitlab-ce:  Update 9.3: 9.3.10 => 9.3.11: Security fixes.

*gitlab-ce-9.5.3 (05 Sep 2017)

  05 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.5.3.ebuild:
  www-apps/gitlab-ce:  Add ebuild for version 9.5.3.

*gitlab-ce-9.0.13 (17 Aug 2017)
*gitlab-ce-9.1.10 (17 Aug 2017)
*gitlab-ce-9.2.10 (17 Aug 2017)
*gitlab-ce-9.3.10 (17 Aug 2017)
*gitlab-ce-9.4.5 (17 Aug 2017)

  17 Aug 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.13.ebuild,
  +gitlab-ce-9.1.10.ebuild, +gitlab-ce-9.2.10.ebuild, +gitlab-ce-9.3.10.ebuild,
  +gitlab-ce-9.4.5.ebuild, -gitlab-ce-9.0.12.ebuild, -gitlab-ce-9.1.9.ebuild,
  -gitlab-ce-9.2.9.ebuild, -gitlab-ce-9.3.9.ebuild, -gitlab-ce-9.4.0.ebuild:
  www-apps/gitlab-ce:  Update versions 9.0 through 9.4 to their respective
  latest patch releases.

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.0.12.ebuild,
  gitlab-ce-9.1.9.ebuild, gitlab-ce-9.2.9.ebuild, gitlab-ce-9.3.9.ebuild:
  www-apps/gitlab-ce:  Emergency fix: After the upgrade to EAPI 6, RUBY_PATCHES
  stopped working the way it did before. use PATCHES instead.

*gitlab-ce-9.4.0 (25 Jul 2017)

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/03-gitlab-ce-9.4.0-database.yml.patch, +gitlab-ce-9.4.0.ebuild,
  gitlab-ce-9.4.0_rc6.ebuild, gitlab-ce-9999.ebuild: