@@ -1,3 +1,9 @@
+*gitlab-ce-10.0.0_rc3 (17 Sep 2017)
+
+  17 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.0.0_rc3.ebuild,
+  -gitlab-ce-9.4.0_rc6.ebuild:
+  www-apps/gitlab-ce:  Add ebuild for gitlab-10.0.0_rc3.
+
   08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
   www-apps/gitlab-ce:  Update ebuild for version 9999 (master branch).
 
